just completed my nav bar part

--- a/sass/utilities/_base.scss
+++ b/sass/utilities/_base.scss
@@ -1,8 +1,19 @@
+@use "./variables" as *;
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-
+ 
+a{
+    text-decoration: none;
+    color: $black;
+   
 }
+ul{
+    list-style: none;
+}
+.container{
+    width:80%;
+    margin:0 auto;
+ }
