--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,59 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: lightgrey;
+}
+nav .nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: no-wrap;
+}
+nav .nav-center ul {
+  display: flex;
+}
+nav .nav-center ul li a {
+  padding: 10px;
+  text-transform: capitalize;
+  display: inline-block;
+}
+nav .nav-center ul li a:hover {
+  background-color: orange;
+  color: white;
+}
+nav .nav-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: no-wrap;
+}
+nav .nav-right fa-bars {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-center {
+    display: none;
+  }
+  .fa-bars {
+    display: none;
+  }
+}
