done with both shop and home pages

--- a/sass/pages/home/_about.scss
+++ b/sass/pages/home/_about.scss
@@ -5,5 +5,11 @@ about{
     h3{
         color: $primary-color;
     }
+    p{
+        opacity: 50%;
+    }
+    .more{
+        background-color: #F4F7FB;
+    }
     
     }
