--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,3 +5,5 @@
 @use "../sass/pages/home/main";
 @use "../sass/pages/home/about";
 @use "../sass/pages/home/address";
+@use "../sass/pages/home/footer";
+@use "../sass/pages/shop/menu";
