--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ nav .nav-right fa-bars {
 }
 section {
   display: flex;
+  padding-block-start: 5%;
 }
 section .hero .heroleft {
   display: flex;
@@ -69,6 +70,7 @@ section .hero .heroleft {
   flex-direction: row;
   flex-wrap: no-wrap;
   display: flex;
+  padding-block-start: 10%;
 }
 section .heromiddle {
   display: flex;
@@ -76,6 +78,7 @@ section .heromiddle {
   align-items: center;
   flex-direction: row;
   flex-wrap: no-wrap;
+  padding-block-start: 10%;
 }
 section .heromiddle .first {
   background-color: #F4F7FB;
@@ -92,12 +95,20 @@ section .heromiddle .first .font {
   flex-direction: row;
   flex-wrap: no-wrap;
 }
+section .heroright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: no-wrap;
+}
 
 main {
   margin-right: 20%;
 }
 main .flavours {
   display: inline-flex;
+  gap: 50px;
 }
 main .flavours ul {
   display: flex;
@@ -111,8 +122,22 @@ main .flavours ul li a:hover {
   background-color: orange;
   color: white;
 }
+main .flavours .taste {
+  border-bottom: solid grey;
+  justify-content: space-between;
+}
 main .price {
   display: flex;
+  justify-content: space-between;
+}
+main .price .p2 {
+  background-color: #F4F7FB;
+}
+main .price .p3 {
+  background-color: #F4F7FB;
+}
+main .price .p4 {
+  background-color: #F4F7FB;
 }
 main .price p {
   opacity: 50%;
@@ -127,18 +152,20 @@ main .price .btn1 {
   color: white;
   padding: 10px;
 }
-main .taste {
-  border-bottom: solid grey;
-}
 main h3 {
   color: orange;
 }
-main .container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  flex-wrap: no-wrap;
+
+#new {
+  margin-left: 50%;
+}
+
+.in {
+  margin-left: 40%;
+}
+
+.flavours {
+  margin-left: 20%;
 }
 
 about {
@@ -147,20 +174,94 @@ about {
 about h3 {
   color: orange;
 }
-
-address .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: no-wrap;
-}
-address .container p {
+about p {
   opacity: 50%;
 }
-address .third {
+about .more {
   background-color: #F4F7FB;
 }
-address h2 {
+
+address .container .help p {
+  opacity: 50%;
+}
+address .container .third {
+  background-color: #F4F7FB;
+}
+address .container h2 {
   color: orange;
+}
+address .container .none {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  background-color: #000;
+  padding: 40px 20px;
+  display: flex;
+  justify-content: space-around;
+}
+footer h1 {
+  color: white;
+}
+footer .list {
+  list-style: none;
+}
+footer .list li a {
+  color: white;
+}
+footer .all {
+  border: 15px;
+}
+footer .all .remove {
+  border-style: none;
+}
+footer .all .btn3 {
+  border-style: none;
+}
+
+menu {
+  margin-right: 20%;
+}
+menu .flavours {
+  display: inline-flex;
+  gap: 50px;
+}
+menu .flavours ul {
+  display: flex;
+}
+menu .flavours ul li a {
+  padding: 10px;
+  text-transform: capitalize;
+  display: inline-block;
+}
+menu .flavours ul li a:hover {
+  background-color: orange;
+  color: white;
+}
+menu .flavours .taste {
+  border-bottom: solid grey;
+  justify-content: space-between;
+}
+menu .price {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+menu .price .p2 {
+  background-color: #F4F7FB;
+}
+menu .price .p3 {
+  background-color: #F4F7FB;
+}
+menu .price .p4 {
+  background-color: #F4F7FB;
+}
+menu .price .p5 {
+  background-color: #F4F7FB;
+}
+menu .price button {
+  background-color: #000;
+  color: white;
+  padding: 10px;
 }
